--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -50,3 +50,13 @@ img {
     width: 100%;
 }
 
+
+@media screen and (max-width: 740px) {
+    main {
+        padding: 0px 100px;
+    }
+
+    header {
+        font-size: 50px;
+    }
+}
