--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -22,6 +22,14 @@ header {
     text-align: center;
     padding-top: 50px;
     margin-bottom: 80px;
+    position: relative;
+}
+
+#clock {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 40px;
 }
 
 main {
@@ -58,5 +66,9 @@ img {
 
     header {
         font-size: 50px;
+    }
+
+    #clock {
+        position: unset;
     }
 }
