--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -52,12 +52,26 @@ div {
     border-radius: 7px;
     margin: 20px;
     flex-shrink: 0;
+    transition: all .3s ease;
+    transform-style: preserve-3d;
 }
 
 img {
     width: 100%;
 }
 
+.active {
+    transform: rotateY(180deg);
+}
+
+.active #gif {
+    transform: rotateY(180deg);
+}
+
+.unactive #static-img {
+    transform: rotate(0deg);
+    backface-visibility: hidden;
+}
 
 @media screen and (max-width: 740px) {
     main {
